updated app.scss with .col property the fixes the text overlapping problem, and updated dependency

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,9 @@
 
 /* Custom Below */
 $gradient: linear-gradient(210deg, #943cff 0%, #dd45d3 40.13%, #fc9a57 90%);
-
+.col {
+	min-width:unset;
+}
 // @import "/node_modules/bootstrap/scss/bootstrap.scss";
 @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.css");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css");
